group 'com.tiza'
version '2.0'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
}

ext{
    springBootVersion = '2.0.0.RELEASE'
}

dependencies {
    compile fileTree(dir:"/lib", include: "*.jar")

    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "$springBootVersion"
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: "$springBootVersion"
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "$springBootVersion"
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: "$springBootVersion"
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: "$springBootVersion"

    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "$springBootVersion"
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}
